--- a/src/precss/header.less
+++ b/src/precss/header.less
@@ -139,7 +139,7 @@ header, .header{
       grid-row: 1 / span 2;
       display: flex;
       justify-content: space-between;
-      padding: 10px 0;
+      padding: 8px 0;
       border: 1px solid black;
       box-sizing: border-box;
       align-items: center;
