--- a/src/precss/mix.less
+++ b/src/precss/mix.less
@@ -22,7 +22,7 @@
 	box-shadow: inset 0 0 0 10px rgba(29, 157, 115, 0.35);
 }
 .size(@n, @col, @offs){
-	width: calc(@wrap_width / @n * @col - @offs);
+	flex-basis: calc(@wrap_width / @n * @col - @offs);
 	box-sizing:border-box;
 	margin: 0 @offs / 2;
 }
